--- a/index.html
+++ b/index.html
@@ -1272,13 +1272,12 @@
 
 <script>
 (function ($) {
-  // Genererer FAQ schema fra eksisterende innhold
+  // Generer FAQ schema kun fra innhold under første FAQ overskrift
   $(function () {
     try {
-      // Fjern tidligere generert schema for å unngå duplikater
+      // Fjern tidligere generert schema
       $("#faq-schema").remove();
 
-      // Hjelpefunksjon: hent ren tekst uten scripts og unødvendige mellomrom
       function getPlainText($el) {
         if (!$el || !$el.length) return "";
         var $clone = $el.clone();
@@ -1286,7 +1285,36 @@
         return $clone.text().replace(/\s+/g, " ").trim();
       }
 
-      // Hjelpefunksjon: legg til par, unngå duplikatspørsmål
+      function headerLevel(tag) {
+        var m = /^H([1-6])$/.exec(String(tag).toUpperCase());
+        return m ? parseInt(m[1], 10) : 6;
+      }
+
+      // Vanlige varianter av FAQ overskrifter
+      var faqHeaderRe = /(faq|ofte stilte sp(ø|o)rsm(å|a)l|frequently asked questions)/i;
+
+      // Finn første overskrift som matcher
+      var $firstAnchor = $("h1, h2, h3, h4, h5, h6").filter(function () {
+        var t = getPlainText($(this));
+        return faqHeaderRe.test(t);
+      }).first();
+
+      if (!$firstAnchor.length) return; // Ingen FAQ overskrift funnet
+
+      // Hent seksjonen som tilhører overskriften, frem til neste overskrift på samme eller høyere nivå
+      function sectionUnderHeader($h) {
+        var lvl = headerLevel($h.prop("tagName"));
+        var nodes = [];
+        var $n = $h.next();
+        while ($n.length) {
+          var tag = String($n.prop("tagName")).toUpperCase();
+          if (/^H[1-6]$/.test(tag) && headerLevel(tag) <= lvl) break;
+          nodes.push($n[0]);
+          $n = $n.next();
+        }
+        return $(nodes);
+      }
+
       var map = Object.create(null);
       var pairs = [];
       function addPair(q, a) {
@@ -1300,38 +1328,27 @@
         pairs.push({ q: qt, a: at });
       }
 
-      // 1. Eksplisitte data-attributter
-      $("[data-faq-item]").each(function () {
-        var $it = $(this);
-        var q = getPlainText($it.find("[data-faq-question]").first());
-        var a = getPlainText($it.find("[data-faq-answer]").first());
-        addPair(q, a);
-      });
+      function extractPairsIn($root) {
+        // data attributter
+        $root.find("[data-faq-item]").each(function () {
+          var $it = $(this);
+          var q = getPlainText($it.find("[data-faq-question]").first());
+          var a = getPlainText($it.find("[data-faq-answer]").first());
+          addPair(q, a);
+        });
 
-      // 2. Details og summary
-      $("details").each(function () {
-        var $d = $(this);
-        var q = getPlainText($d.children("summary").first());
-        var $content = $d.clone();
-        $content.children("summary").remove();
-        var a = getPlainText($content);
-        addPair(q, a);
-      });
+        // details og summary
+        $root.find("details").each(function () {
+          var $d = $(this);
+          var q = getPlainText($d.children("summary").first());
+          var $content = $d.clone();
+          $content.children("summary").remove();
+          var a = getPlainText($content);
+          addPair(q, a);
+        });
 
-      // 3. Vanlige FAQ-seksjoner og akkordeoner
-      // Finn seksjoner som sannsynligvis er FAQ
-      var $faqSections = $("*").filter(function () {
-        var id = (this.id || "").toLowerCase();
-        var cls = (this.className || "").toString().toLowerCase();
-        var label = ($(this).attr("aria-label") || "").toLowerCase();
-        return /faq/.test(id) || /faq/.test(cls) || /faq/.test(label);
-      });
-
-      $faqSections.each(function () {
-        var $sec = $(this);
-
-        // a) Elementer som ser ut som items
-        $sec.find(".faq-item, .accordion-item, .accordion, .card, .panel").each(function () {
+        // Vanlige akkordeon strukturer
+        $root.find(".faq-item, .accordion-item, .accordion, .card, .panel").each(function () {
           var $it = $(this);
           var q = getPlainText(
             $it.find(".faq-q, .faq-question, .accordion-header, .card-header, .panel-heading, h2, h3, h4, h5").first()
@@ -1339,75 +1356,50 @@
           var a = getPlainText(
             $it.find(".faq-a, .faq-answer, .accordion-body, .card-body, .panel-body, .content, p, div").first()
           );
-          addPair(q, a);
+          if (q && a) addPair(q, a);
         });
 
-        // b) Overskrift som ser ut som spørsmål etterfulgt av svarblokk
-        $sec.find("h2, h3, h4, h5").each(function () {
+        // Overskrift som ser ut som spørsmål etterfulgt av svarblokk
+        $root.find("h2, h3, h4, h5").each(function () {
           var $h = $(this);
           var q = getPlainText($h);
-          if (!/\?$/.test(q)) return;
+          var likelyQuestion = /\?$/.test(q) || q.split(" ").length <= 12;
+          if (!likelyQuestion) return;
           var $ans = $h.nextUntil("h2, h3, h4, h5");
           if (!$ans.length) $ans = $h.next();
           var a = getPlainText($ans);
-          addPair(q, a);
-        });
-      });
-
-      // 4. Siste utvei: hele dokumentet, overskrifter som ender med spørsmålstegn
-      if (pairs.length === 0) {
-        $("h2, h3, h4, h5").each(function () {
-          var $h = $(this);
-          var q = getPlainText($h);
-          if (!/\?$/.test(q)) return;
-          var $ans = $h.nextUntil("h2, h3, h4, h5");
-          if (!$ans.length) $ans = $h.next();
-          var a = getPlainText($ans);
-          addPair(q, a);
+          if (a) addPair(q, a);
         });
       }
 
-      // Rensk opp svartekst, fjern svært korte svar og begrens antall
+      // Kjør kun i seksjonen under første FAQ overskrift
+      var $section = sectionUnderHeader($firstAnchor);
+      extractPairsIn($section);
+
+      // Rensk, begrens og injiser JSON LD
       pairs = pairs
-        .map(function (p) {
-          return {
-            q: p.q.replace(/\s+/g, " ").trim(),
-            a: p.a.replace(/\s+/g, " ").trim()
-          };
-        })
-        .filter(function (p) {
-          return p.q.length >= 3 && p.a.length >= 3;
-        })
+        .map(function (p) { return { q: p.q.replace(/\s+/g, " ").trim(), a: p.a.replace(/\s+/g, " ").trim() }; })
+        .filter(function (p) { return p.q.length >= 3 && p.a.length >= 3; })
         .slice(0, 30);
 
       if (!pairs.length) return;
 
-      // Bygg JSON-LD via objekter for sikker escaping
       var faqData = {
         "@context": "https://schema.org",
         "@type": "FAQPage",
         "mainEntity": pairs.map(function (p) {
-          return {
-            "@type": "Question",
-            "name": p.q,
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": p.a
-            }
-          };
+          return { "@type": "Question", "name": p.q, "acceptedAnswer": { "@type": "Answer", "text": p.a } };
         })
       };
 
-      // Lag script-element og injiser i dokumenthodet
       var script = document.createElement("script");
       script.type = "application/ld+json";
       script.id = "faq-schema";
       script.text = JSON.stringify(faqData);
       (document.head || document.body).appendChild(script);
 
-      // Valgfritt: logg hvor mange elementer som ble generert
       if (window.console && console.info) {
-        console.info("FAQ schema generert:", pairs.length, "sporsmal");
+        console.info("FAQ schema generert fra første FAQ seksjon. Elementer:", pairs.length);
       }
     } catch (e) {
       if (window.console && console.error) {
@@ -1417,6 +1409,7 @@
   });
 })(jQuery);
 </script>
+
 
 </body>
 
