--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@
       }
 
       // Match på vanlige varianter av FAQ-overskrifter
-      var faqHeaderRe = /(faq|ofte stilte sp(ø|o)rsm(å|a)l|frequently asked questions)/i;
+      var faqHeaderRe = /(faq|ofte stilte sp(ø|o)rsm(å|a)l|frequently asked questions|Frequently Asked Questions|FAQ)/i;
 
       // Finn overskrifter som inneholder FAQ-tekst
       var $anchors = $("h1, h2, h3, h4, h5, h6").filter(function () {
